--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,421 @@
-@font-face {
-	font-family: '';
-	src: url();
+html {
+	width: 100%;
+	height: 100%;
+	scroll-behavior: smooth;
+}
+body {
+    font-family: 'transat', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+p {
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1.7em;
+    color: #999;
+}
+h1{
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+h2{
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+a, a:hover, a:focus {
+      color: inherit;
+      text-decoration: none;
+      transition: all 0.3s;
 }
 
-body {
-    font-family: '';
+section {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+#sec01 {
+    background-color:#203835;
+}
+  
+#sec02 {
+    background-color:#f8f3e9;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin-top:5px;
+    margin-left:50px;
+    margin-bottom:25px
+}
+
+/* SIDEBAR STYLE */
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    perspective: 1500px;
+}
+.wrapper02 {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    perspective: 1500px;
+}
+
+.ver_line {
+    column-width: 50px;
+    /* background: #7aabab; */
+}
+.ver_line2 {
+    column-width: 1px;
+    /* background: #7aabab; */
+}
+.vl {
+    border-left: 1.5px solid #28544f;
+    height: 1000px;
+}
+.row_title {
+    height: 200px;
+    background: #203835;
+}
+.row_title02 {
+    height: 200px;
+    background: #f8f3e9;
+}
+
+#sidebar{
+    min-width: 250px;
+    max-width: 250px;
+	margin-top:0px;
+    background: #203835;
+    color: #fff;
+    transition: all 0.5s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+    transform-origin: bottom left;
+}
+#sidebar.active {
+    margin-left: -250px;
+    transform: rotateY(100deg);
+}
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: #203835;
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+#sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid #28544f;
+}
+#sidebar ul p {
+    color: #203835;
+    padding: 5px;
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+#sidebar ul li a {
+    padding: 7px;
+    font-size: 1.1em;
+    display: block;
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+#sidebar ul li a:hover {
+    color: #f0c96c;
+    /* background: #fff; */
+}
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+    color: #f0c96c;
+    /* background: #28544f; */
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+#sidebar02{
+    min-width: 250px;
+    max-width: 250px;
+	margin-top:0px;
+    background: #f8f3e9;
+    color: #203835;
+    transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+    transform-origin: bottom left;
+}
+#sidebar02.active {
+    margin-left: -250px;
+    transform: rotateY(100deg);
+}
+#sidebar02.sidebar-header02 {
+    padding: 20px;
+    background: #f8f3e9;
+    font-family: transat,sans-serif;
+}
+#sidebar02 ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid #f8f3e9;
+}
+#sidebar02 ul p {
+    color: #f8f3e9;
+    padding: 5px;
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+#sidebar02 ul li a {
+    padding: 7px;
+    font-size: 1.1em;
+    display: block;
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+#sidebar02 ul li a:hover {
+    color: #689161;
+    /* background: #fff; */
+}
+#sidebar02 ul li.active > a, a[aria-expanded="true"] {
+    color: #689161;
+    /* background: #28544f; */
+}
+
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+a[data-toggle="collapse02"] {
+    position: relative;
+}
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+.dropdown-toggle02::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    /* background: #f6c143; */
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    font-family: transat,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+/* CONTENT STYLE */
+#content {
+    width: 100%;
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
+
+#sidebarCollapse {
+    width: 40px;
+    height: 40px;
+    background: #f5f5f5;
+    cursor: pointer;
+}
+#sidebarCollapse span {
+    width: 80%;
+    height: 2px;
+    margin: 0 auto;
+    display: block;
+    background: #555;
+    transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
+    transition-delay: 0.2s;
+}
+#sidebarCollapse span:first-of-type {
+    transform: rotate(45deg) translate(2px, 2px);
+}
+#sidebarCollapse span:nth-of-type(2) {
+    opacity: 0;
+}
+#sidebarCollapse span:last-of-type {
+    transform: rotate(-45deg) translate(1px, -1px);
+}
+#sidebarCollapse.active span {
+    transform: none;
+    opacity: 1;
+    margin: 5px auto;
+}
+
+/* SCROLL DOWN BUTTON */
+.demo a {
+    position: relative;
+    margin-top: -700px;
+    bottom: -30px;
+    left: 47%;
+    z-index: 2;
+    display: inline-block;
+    -webkit-transform: translate(0, -40%);
+    transform: translate(0, -40%);
+    color: #fff;
+    letter-spacing: .1em;
+    text-decoration: none;
+    transition: opacity .4s;
+}
+.demo a:hover {
+    opacity: .6;
+}
+  
+#section04 a {
+    margin-top: 0px;
+}
+#section04 a span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-top: 15px;
+    margin-left: -12px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb04 2s infinite;
+    animation: sdb04 2s infinite;
+    box-sizing: border-box;
+}
+@-webkit-keyframes sdb04 {
+    0% {
+      -webkit-transform: rotate(-45deg) translate(0, 0);
+    }
+    20% {
+      -webkit-transform: rotate(-45deg) translate(-10px, 10px);
+    }
+    40% {
+      -webkit-transform: rotate(-45deg) translate(0, 0);
+    }
+}
+@keyframes sdb04 {
+    0% {
+      transform: rotate(-45deg) translate(0, 0);
+    }
+    20% {
+      transform: rotate(-45deg) translate(-10px, 10px);
+    }
+    40% {
+      transform: rotate(-45deg) translate(0, 0);
+    }
+}
+
+/* BIG VISUALIZATION */
+.Vis000 body{
+    border: 1px solid #eee;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    box-sizing: border-box;
+}
+.Vis000 content {
+    box-shadow: 0 1px 3px #eee;
+    flex-grow: 1;
+    overflow: scroll;
+    border: none;
+    min-height: 0;
+}
+.Vis000 wordmark {
+    height: 15px;
+}
+.Vis000 attribution {
+    display: flex;
+    align-items: center;
+    min-width: 0;
+}
+.Vis000 avatar {
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    margin-right: 4px;
+}
+.Vis000 avatar img {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+}
+.Vis000 author {
+    margin-right: 4px;
+    font-weight: bold;
+}
+@media (max-width: 320px) {
+    .wordmark {
+        display: none;
+    }
+}
+
+/* EDIAQUERIES */
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+        transform: rotateY(90deg);
+    }
+    #sidebar.active {
+        margin-left: 0;
+        transform: none;
+    }
+    #sidebarCollapse span:first-of-type,
+    #sidebarCollapse span:nth-of-type(2),
+    #sidebarCollapse span:last-of-type {
+        transform: none;
+        opacity: 1;
+        margin: 5px auto;
+    }
+    #sidebarCollapse.active span {
+        margin: 0 auto;
+    }
+    #sidebarCollapse.active span:first-of-type {
+        transform: rotate(45deg) translate(2px, 2px);
+    }
+    #sidebarCollapse.active span:nth-of-type(2) {
+        opacity: 0;
+    }
+    #sidebarCollapse.active span:last-of-type {
+        transform: rotate(-45deg) translate(1px, -1px);
+    }
 }
 
 /* Small devices (landscape phones, 576px and up) */
