--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,16 @@ h2{
     font-weight: 400;
     font-style: normal;
 }
+.header-2 {
+    font-size:25px ;
+}
 a, a:hover, a:focus {
       color: inherit;
       text-decoration: none;
       transition: all 0.3s;
+}
+.text-white {
+    color: #fff;
 }
 
 section {
